<resources>
    <string name="app_name">QuenchQuest</string>
    <string name="txtButtonLogin">Login</string>
    <string name="txtEmailHint">Email</string>
    <string name="txtPasswordHint">Password</string>
    <string name="txtButtonRegister">Register</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="txtGoToLogin">Have an account? Log in now.</string>
    <string name="txtGoToRegister">Don\'t have an account? Click here to register</string>
    <string name="txtToday">Today</string>
    <string name="txtStats">Stats</string>
    <string name="txtAdd">Add</string>
    <string name="txtLearn">Learn</string>
    <string name="txtSettings">Settings</string>
    <string name="txtLogout">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_minus">-</string>
    <string name="txt_plus">+</string>
    <string name="txtVolumeHint">400mL</string>
    <string name="txtDrinkNameHint">What did you drink?</string>
    <string name="txt_add_drink">Add Drink</string>
    <string name="txtNoDrinks">You haven\'t drank anything today! Go get started!</string>
    <string name="txtNotifications">Notifications</string>
    <string name="txtOff">Off</string>
    <string name="txtOn">On</string>
    <string name="txt_15minutes">Every 15 Minutes</string>
    <string name="txt_30minutes">Every 30 Minutes</string>
    <string name="txt_60minutes">Every 1 Hour</string>
    <string name="txtProfile">Edit Profile</string>
    <string name="txtEdit">Edit</string>
    <string name="txtChoosePicture">Choose your profile picture</string>
    <string name="txtName">Display Name</string>
    <string name="txtGoal">Daily Goal: 2000 mL</string>
    <string name="learn_more">Learn more on the details and benefits of hydration from these sources:</string>
    <string name="btnHealthBC">Read HealthBC Article</string>
    <string name="txtBMI">Calculate your BMI!</string>
</resources>