<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/txtProfile"
        android:icon="@drawable/person"/>
    <item
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/txtStats"
        android:icon="@drawable/stats"/>
    <item
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/txtAdd"
        android:icon="@drawable/add"/>
    <item
        android:id="@+id/learn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/txtLearn"
        android:icon="@drawable/learn"/>
    <item
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/txtSettings"
        android:icon="@drawable/settings"/>
</menu>