<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp">

    <Switch
        android:id="@+id/switch_15"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingHorizontal="20dp"
        android:text="@string/txt_15minutes"
        android:textSize="20sp"/>

    <Switch
        android:id="@+id/switch_30"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingHorizontal="20dp"
        android:text="@string/txt_30minutes"
        android:textSize="20sp"/>

    <Switch
        android:id="@+id/switch_60"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingHorizontal="20dp"
        android:text="@string/txt_60minutes"
        android:textSize="20sp"/>


</LinearLayout>
